add hover effect to logos

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,11 @@
         font-size: 14px;
     }
 
+    .logo:hover {
+        filter: invert(52%) sepia(82%) saturate(1560%) hue-rotate(309deg)
+            brightness(98%) contrast(101%);
+    }
+
     .flip-card {
         transform-style: preserve-3d;
     }
