--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rampart+One&display=swap");
 
 @tailwind base;
 @tailwind components;
